# CargoDrop-Project

./: .gitignore  Cargo.toml  README.md  Readme
doc/: architecture_report.md  network_protocol_recap.md  testing_ble.md
doc/reports/: rendezvous_report.md
src/: cli.rs  main.rs  use_cases.rs
src/examples/: test.rs
src/network/: file_transfer.rs  mod.rs  tcp_client.rs  tcp_server.rs
src/rendezvous/: mod.rs
src/rendezvous/ble_rendezvous/: advertise.rs  discover.rs  mod.rs
src/rendezvous/lan_rendezvous/: mod.rs
src/security/: encryption.rs  handshake.rs  identity.rs  mod.rs
src/ui/: cli_handler.rs  interaction.rs  mod.rs
src/user_info/: mod.rs  network.rs  storage.rs
